--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/morgan": "^1.9.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.5"
