--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "@types/morgan": "^1.9.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "mongoose": "^6.2.5"
+    "mongoose": "^6.2.5",
+    "morgan": "^1.10.0"
   }
 }
