--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,8 @@
     "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "concurrently": "^7.0.0",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.5"
@@ -25,6 +27,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
